@@ -6,7 +6,7 @@
 # This special exception was added by Craig Small in version 0.37 of dh-make.
 # Default/i386/amd64 options from sdlmame rules file by Cesare Falco.
 
-export DH_VERBOSE = 1
+#export DH_VERBOSE = 1
 
 DEB_BUILD_ARCH ?= $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 DEB_HOST_ARCH_BITS ?= $(shell dpkg-architecture -qDEB_HOST_ARCH_BITS)
@@ -46,7 +46,8 @@ DEB_OPTS = \
     USE_SYSTEM_LIB_SQLITE3=1 \
     USE_SYSTEM_LIB_PORTMIDI=1 \
     USE_SYSTEM_LIB_PORTAUDIO=1 \
-    USE_SYSTEM_LIB_UV=1
+    USE_SYSTEM_LIB_UV=1 \
+    VERBOSE=1
 
 # Override make variables for specific archs
 # Linux architectures
@@ -160,11 +161,6 @@ DEB_OPTS += \
     NOASM= \
     USE_SYSTEM_LIB_PORTMIDI= \
     NO_USE_MIDI=1
-endif
-
-# Enable full building log when verbose output required
-ifdef DH_VERBOSE
-DEB_OPTS += VERBOSE=1
 endif
 
 DEB_MAME_OPTS = \
